--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -137,7 +137,7 @@ html[data-theme='dark'] .topBannerTitleText {
 
 .hero {
   background-color: #2b3137;
-  background-image: url('/img/main_page/hero dark.png');
+  background-image: url('/img/main_page/hero.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
